# esp32-p4-smart86-signalk

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/audio_feedback/: CMakeLists.txt  audio_feedback.cpp  audio_feedback.hpp
components/autopilot_app/: CMakeLists.txt  autopilot_app.cpp  autopilot_app.hpp  helm_icon.c  helm_icon_alpha.h  lv_font_roboto_96.c
components/data_browser_app/: CMakeLists.txt  data_browser_app.cpp  data_browser_app.hpp  lv_font_montserrat_120.c  lv_font_montserrat_310.c  lv_font_montserrat_360.c  lv_font_montserrat_90.c
components/instrument_ui/: CMakeLists.txt  instrument_helpers.cpp  instrument_helpers.hpp  instrument_theme.h  signalk_logo.h  wind_gauge_widget.cpp  wind_gauge_widget.hpp
components/settings_app/: CMakeLists.txt  settings_app.cpp  settings_app.hpp  settings_gear_icon.c
components/signalk_app/: CMakeLists.txt  signalk_app.cpp  signalk_app.hpp
components/signalk_auth/: CMakeLists.txt  signalk_auth.cpp  signalk_auth.hpp
components/signalk_client/: CMakeLists.txt  signalk_client.cpp  signalk_client.hpp  sk_logo_alpha.h
components/unit_config/: CMakeLists.txt  unit_config.cpp  unit_config.hpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.hpp
components/wifi_settings_app/: CMakeLists.txt  wifi_icon.c  wifi_settings_app.cpp  wifi_settings_app.hpp
components/wind_gauge_app/: CMakeLists.txt  wind_gauge_app.cpp  wind_gauge_app.hpp  wind_gauge_icon.c
components/wind_rose_app/: CMakeLists.txt  lv_font_montserrat_62.c  lv_font_montserrat_67.c  lv_font_montserrat_76.c  lv_font_montserrat_bold_50.c  wind_rose_app.cpp  wind_rose_app.hpp
docs/: APP_ICONS.md  AUTOPILOT_UI.md  BUILD.md  DEV_SERVER.md  FONTS.md  SETUP.md  SIMULATOR.md  WIND_GAUGE.md  esp-brookesia.md  signalk-paths.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
scripts/: capture_serial.py
simulator/: CMakeLists.txt  lv_conf.h  main.cpp  render.sh
simulator/stubs/: esp_http_client.h  esp_log.h  esp_timer.h  esp_ui.hpp  esp_ui_stub.cpp  sdkconfig.h  signalk_auth_stub.cpp  signalk_client_stub.cpp  wifi_manager_stub.cpp
simulator/stubs/freertos/: FreeRTOS.h  semphr.h
